Fixing margin on categories spacing

--- a/static/js/create_react/src/css/main.css
+++ b/static/js/create_react/src/css/main.css
@@ -51,5 +51,5 @@ ul {
 }
 
 .cat-name {
-  margin: 20px 0px;
+  margin: 0px 0px;
 }
